# libbgpiod

./: .gitignore  COPYRIGHT  Makefile  Makefile.global  Makefile.global.in  aclocal.m4  configure  configure.ac
RELEASES/0.3.0/: bgpiod-dbgsym_0.3.0-1_amd64.deb  bgpiod-dbgsym_0.3.0-1_arm64.deb  bgpiod_0.3.0-1_amd64.deb  bgpiod_0.3.0-1_arm64.deb  libbgpiod-0.3.0.tar.xz  libbgpiod-dev_0.3.0-1_amd64.deb  libbgpiod-dev_0.3.0-1_arm64.deb  libbgpiod-doc_0.3.0-1_all.deb  libbgpiod0-dbgsym_0.3.0-1_amd64.deb  libbgpiod0-dbgsym_0.3.0-1_arm64.deb  libbgpiod0_0.3.0-1_amd64.deb  libbgpiod0_0.3.0-1_arm64.deb  libbgpiod_0.3.0-1.debian.tar.xz  libbgpiod_0.3.0-1.dsc  libbgpiod_0.3.0.orig.tar.xz
autom4te.cache/: output.0  requests  traces.0  traces.1
debian/: autoreconf.after  autoreconf.before  bgpiod.install  changelog  control  copyright  debhelper-build-stamp  files  libbgpiod-dev.install  libbgpiod-doc.doc-base  libbgpiod.triggers  libbgpiod0.install  libbgpiod0.symbols  rules
doc/: Doxyfile.in  GNUmakefile  README.md
docs/: Doxyfile  Doxyfile.in  README.md  annotated.html  annotated_dup.js  api_overview_page.html  api_usage_page.html  bgpio_tools_page.html  bgpiod_8c.html  bgpiod_8c.js  bgpiod_8c__incl.map  bgpiod_8c__incl.md5  bgpiod_8c_a30aad46c9e2e24679b2566871f9d8099_cgraph.map  bgpiod_8c_a30aad46c9e2e24679b2566871f9d8099_cgraph.md5  bgpiod_8c_a3ba3b0f85339f7eb93bfa9eac3da365f_cgraph.map  bgpiod_8c_a3ba3b0f85339f7eb93bfa9eac3da365f_cgraph.md5  bgpiod_8c_ab4a43216beffb3333e563701f0883ce2_cgraph.map  bgpiod_8c_ab4a43216beffb3333e563701f0883ce2_cgraph.md5  bgpiod_8c_ab845cc372ba3506973ba09cb1d4bbfd7_cgraph.md5  bgpiod_8c_af789101b6c9070a398ac62e6eebbc8aa_cgraph.map  bgpiod_8c_af789101b6c9070a398ac62e6eebbc8aa_cgraph.md5  bgpiod_8c_source.html  bgpiod_8h.html  bgpiod_8h.js  bgpiod_8h__dep__incl.map  bgpiod_8h__dep__incl.md5  bgpiod_8h__incl.map  bgpiod_8h__incl.md5  bgpiod_8h_ab845cc372ba3506973ba09cb1d4bbfd7_cgraph.map  bgpiod_8h_afe327c27a9d19e0b59886575e669190f_cgraph.map  bgpiod_8h_afe327c27a9d19e0b59886575e669190f_cgraph.md5  bgpiod_8h_source.html  bgpiodetect_8c.html  bgpiodetect_8c.js  bgpiodetect_8c__incl.map  bgpiodetect_8c__incl.md5  bgpiodetect_8c_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  bgpiodetect_8c_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  bgpiodetect_8c_a9ffc6e5689c837d518ad706e4d577d7f_cgraph.map  bgpiodetect_8c_a9ffc6e5689c837d518ad706e4d577d7f_cgraph.md5  (+189 more)
docs/man/: xyz.html
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+32 more)
examples/: Makefile  detect  detect.c  get  get.c  get_and_set  get_and_set.c  info  info.c  monitor  monitor.c  set  set.c  watch  watch.c
lib/: GNUmakefile  bgpiod.c
tests/: system  unit
tools/: bgpiodetect.c  bgpioget.c  bgpioinfo.c  bgpiomon.c  bgpioset.c  bgpiotools.h  bgpiotools.h.in  bgpiowatch.c  utils.c  vectors.c
(+23 files in other folders)
